--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_tts: ^4.2.0
   math_expressions: ^2.6.0
   form_field_validator: ^1.1.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
